2010-10-12  john ffitch  <jpff@codemist.co.uk>

	* Engine/csound_orc.y: Allow labels in exprlists

2010-10-08  John ff  <jpff@cs.bath.ac.uk>

	* OOps/cmath.c (ipow, apow): If normalisation is zero make it 1;
	Needed in new parser as optional arg not  handled

	* csound_orc.l: Many changes in macros and stack of inputs

2010-09-23  john ffitch  <jpff@codemist.co.uk>

	* Opcodes/fout.c (sprints): Attempt tp fix %%->% problem

2010-09-18  john ffitch  <jpff@codemist.co.uk>

	* Engine/csound_orc_expressions.c (create_expression): Unary minus
	should use i rate if it can

2010-09-17  john ffitch  <jpff@codemist.co.uk>

	* SConstruct: 
	* Top/csound.c: Make new parser default

2010-09-02  Michael Gogins <michael.gogins@gmail.com>

	* Migrated Windows compiler to MinGW GCC 4.4.0 from Qt for all
	third party and Csound executables. This compiler generates dw2
	exception handling code.

	* Fixed up examples to execute in their own directories.

	* Changed csoundSetMessageCallback to reset the callback to
	csoundDefaultMessageCallback if the user sets the callback to
	null, in order to prevent segment faults.

2010-09-01  john ffitch  <jpff@codemist.co.uk>

	* Opcodes/gab/gab.c (adsynt2): Phase not handled correctly

2010-08-31  john ffitch  <jpff@codemist.co.uk>

	* Engine/csound_orc_expressions.c: Many changes to make if_then
	etc work

2010-08-28  Michael Gogins <michael.gogins@gmail.com>

        * Replaced csound-build.tex with
	How_to_Build_Csound_on_Windows.doc, in Microsoft Word format,
	which should be more accessible to users.

        * Changed multi-threading in the head branch to use OpenMP instead
	of PThreads, for greater clarity and maintability.

2010-08-26  john ffitch  <jpff@codemist.co.uk>

	* Engine/csound_orc_expressions.c (create_cond_expression): New
	code to deal with (a?b:c) variant
	(is_expression_node): Added S_Q to expression operators
	(create_expression): Call create_cond_expression

2010-08-25  John ff  <jpff@cs.bath.ac.uk>
